--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.57.0",
+  "version": "0.59.2",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -15,17 +15,22 @@
     "lint": "next lint",
     "export": "next build && next export",
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
-    "proto": "echo `pwd`"
+    "postbuild": "next-sitemap --config sitemap.js"
   },
   "dependencies": {
-    "@dendronhq/common-all": "^0.57.0",
-    "@dendronhq/common-frontend": "^0.57.0",
+    "@chakra-ui/react": "^1.6.7",
+    "@dendronhq/common-all": "^0.59.2",
+    "@dendronhq/common-frontend": "^0.59.2",
+    "html-react-parser": "^1.2.8",
     "lodash": "^4.17.21",
     "next": "10.2.0",
     "next-seo": "^4.26.0",
+    "next-sitemap": "^1.6.168",
     "react": "17.0.1",
     "react-css-theme-switcher": "0.2.3",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-ga": "^3.3.0",
+    "sass": "^1.39.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.12",
