--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@chakra-ui/react": "^1.6.7",
     "@dendronhq/common-all": "^0.59.3-alpha.0",
     "@dendronhq/common-frontend": "^0.59.3-alpha.0",
+    "antd": "4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
