--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.60.1-alpha.2",
+    "@dendronhq/common-all": "0.60.1-alpha.2",
     "@dendronhq/common-frontend": "^0.60.1-alpha.2",
     "antd": "4.15.5",
     "html-react-parser": "^1.3.0",
