--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@chakra-ui/react": "^1.6.7",
     "@dendronhq/common-all": "0.60.1-alpha.2",
     "@dendronhq/common-frontend": "^0.60.1-alpha.2",
-    "antd": "4.15.5",
+    "antd": "^4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
@@ -32,7 +32,7 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-ga4": "^1.0.6",
-    "react-redux": "7.2.3",
+    "react-redux": "^7.2.3",
     "sass": "^1.41.1"
   },
   "devDependencies": {
