--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.60.1-alpha.2",
+  "version": "0.60.1-alpha.3",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "0.60.1-alpha.2",
-    "@dendronhq/common-frontend": "^0.60.1-alpha.2",
+    "@dendronhq/common-all": "^0.60.1-alpha.3",
+    "@dendronhq/common-frontend": "^0.60.1-alpha.3",
     "antd": "^4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
