--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@chakra-ui/react": "^1.6.7",
     "@dendronhq/common-all": "^0.60.2-alpha.0",
     "@dendronhq/common-frontend": "^0.60.2-alpha.0",
+    "@dendronhq/engine-server": "^0.60.2-alpha.0",
     "antd": "^4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "next": "^11.1.2",
+    "next-mdx-remote": "^3.0.4",
     "next-seo": "^4.27.0",
     "next-sitemap": "^1.6.168",
     "react": "^17.0.2",
