--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
+    "build:sitemap:ts": "tsc -p tsconfig.sitemap.json",
+    "build:sitemap": "next-sitemap --config dist/scripts/sitemap.js",
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
-    "postbuild": "next-sitemap --config sitemap.js"
+    "postinstall": "yarn build:sitemap:ts",
+    "postbuild": "yarn build:sitemap"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
