--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.63.0",
+  "version": "0.63.1",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -14,16 +14,13 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export",
-    "build:sitemap:ts": "tsc -p tsconfig.sitemap.json",
-    "build:sitemap": "next-sitemap --config dist/scripts/sitemap.js",
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
-    "postinstall": "yarn build:sitemap:ts",
-    "postbuild": "yarn build:sitemap"
+    "postbuild": "next-sitemap --config sitemap.js"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.63.0",
-    "@dendronhq/common-frontend": "^0.63.0",
+    "@dendronhq/common-all": "^0.63.1",
+    "@dendronhq/common-frontend": "^0.63.1",
     "antd": "^4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
