--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "jsx": "preserve"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "lib"]
+  "exclude": ["node_modules"]
 }
