--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.69.0",
+  "version": "0.69.2",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -17,12 +17,14 @@
     "sync:theme": "cp ../dendron-next-server/public/*theme.css public/",
     "postbuild": "next-sitemap --config sitemap.js",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "clean": "yarn rimraf public data out",
+    "rimraf": "npx rimraf"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.69.0",
-    "@dendronhq/common-frontend": "^0.69.0",
+    "@dendronhq/common-all": "^0.69.2",
+    "@dendronhq/common-frontend": "^0.69.2",
     "antd": "^4.15.5",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
