--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs-extra": "^10.0.0",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
+    "luxon": "^1.25.0",
     "next": "12",
     "next-seo": "^4.27.0",
     "next-sitemap": "1.8.11",
@@ -46,6 +47,7 @@
     "@next/bundle-analyzer": "^11.1.2",
     "@playwright/test": "^1.18.1",
     "@types/fs-extra": "^9.0.12",
+    "@types/luxon": "^1.25.0",
     "@types/react": "^17.0.21",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
