--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "luxon": "^1.25.0",
-    "next": "^12.1.0",
+    "next": "12.1.0",
     "next-seo": "^4.27.0",
     "next-sitemap": "1.8.11",
     "react": "^17.0.2",
