--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@next/bundle-analyzer": "^11.1.2",
     "@playwright/test": "^1.18.1",
     "@types/fs-extra": "^9.0.12",
+    "@types/luxon": "^2.3.1",
     "@types/react": "^17.0.21",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
