--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "test": "playwright test",
     "test:skipbuild": "SKIP_BUILD=1 playwright test"
   },
+  "overrides": {
+    "trim": "0.0.3"
+  },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
     "@dendronhq/common-all": "^0.112.1",
