--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.111.0",
+  "version": "0.112.1",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -23,17 +23,20 @@
     "test": "playwright test",
     "test:skipbuild": "SKIP_BUILD=1 playwright test"
   },
+  "overrides": {
+    "trim": "0.0.3"
+  },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.111.0",
-    "@dendronhq/common-frontend": "^0.111.0",
+    "@dendronhq/common-all": "^0.112.1",
+    "@dendronhq/common-frontend": "^0.112.1",
     "@giscus/react": "^2.2.0",
     "antd": "^4.15.5",
     "fs-extra": "^10.0.0",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "luxon": "^1.25.0",
-    "next": "12.1.0",
+    "next": "^12.3.0",
     "next-seo": "^4.27.0",
     "next-sitemap": "1.8.11",
     "react": "^17.0.2",
