--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@playwright/test": "^1.18.1",
     "@types/fs-extra": "^9.0.12",
     "@types/luxon": "^2.3.1",
-    "@types/react": "^17.0.21",
+    "@types/react": "18.0.20",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "har-validator": "^5.1.5",
