--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:skipbuild": "SKIP_BUILD=1 playwright test"
   },
   "overrides": {
-    "trim": "0.0.3"
+    "trim": "0.0.3",
+    "@types/react": "18.0.20"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
