--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendronhq/nextjs-template",
-  "version": "0.114.0",
+  "version": "0.111.0",
   "license": "Apache-2.0",
   "private": true,
   "repository": {
@@ -23,21 +23,17 @@
     "test": "playwright test",
     "test:skipbuild": "SKIP_BUILD=1 playwright test"
   },
-  "overrides": {
-    "trim": "0.0.3",
-    "@types/react": "17.0.39"
-  },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
-    "@dendronhq/common-all": "^0.114.0",
-    "@dendronhq/common-frontend": "^0.114.0",
+    "@dendronhq/common-all": "^0.111.0",
+    "@dendronhq/common-frontend": "^0.111.0",
     "@giscus/react": "^2.2.0",
     "antd": "^4.15.5",
     "fs-extra": "^10.0.0",
     "html-react-parser": "^1.3.0",
     "lodash": "^4.17.21",
     "luxon": "^1.25.0",
-    "next": "^12.3.0",
+    "next": "12.1.0",
     "next-seo": "^4.27.0",
     "next-sitemap": "1.8.11",
     "react": "^17.0.2",
@@ -46,15 +42,14 @@
     "react-ga": "^3.3.0",
     "react-ga4": "^1.0.6",
     "react-redux": "^7.2.3",
-    "sass": "^1.41.1",
-    "zod": "3.19.1"
+    "sass": "^1.41.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^11.1.2",
     "@playwright/test": "^1.18.1",
     "@types/fs-extra": "^9.0.12",
     "@types/luxon": "^2.3.1",
-    "@types/react": "17.0.39",
+    "@types/react": "^17.0.21",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "har-validator": "^5.1.5",
