--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@next/bundle-analyzer": "^11.1.2",
     "@playwright/test": "^1.26.0",
     "@types/fs-extra": "^9.0.12",
+    "@types/lodash": "^4.14.186",
     "@types/luxon": "^2.3.1",
     "@types/react": "^17.0.39",
     "cpx": "^1.5.0",
