--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/fs-extra": "^9.0.12",
     "@types/lodash": "^4.14.186",
     "@types/luxon": "^2.3.1",
-    "@types/react": "^17.0.39",
+    "@types/react": "17.0.21",
     "cpx": "^1.5.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
